pkl-core/src/test/files/LanguageSnippetTests/input/errors/cannotRenderMixin.pkl
m: Mixin = new {
    mixinVal = "anything"
}

foo = new Dynamic {
    bar = "baz"
} |> m
